--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">SmartWeather</string>
+    <string name="str_title_smw">SmartWeather</string>
 </resources>
